@@ -8,6 +8,7 @@ Version 3.5.0
 * Fix a case where absence of pulse cal file leads to seg fault (NRAO bug VLB-134, second part)
 * Fix a long-standing (introduced in 2009 for DiFX-2.0) problem in generating the MC table:  The last term in the clock polynomial (ususally the rate) was ignored, causing incorrect entries in both the clock (due to drift since the reference time) and clock rate columns of this table.
 * Support multiple datastreams per antenna.  Only changes really needed were in handling of DiFX-extracted pulse cal.
+* Lynn Matthews reported a problem with AN tables when performing VBGLU.  Problem was found to be populating POLCALA and POLCALB arrays witn NOPCAL=0, causing confusion in AIPS.  Fixed.
 
 Version 3.4.0
 * Add command line option --primary-band.  This causes a keyword to be added to the output FITS file.  Intended for VLITE.
